[project]
name = "bigdata-ecommerce"
version = "1.0.0"
description = "Fashion E-commerce Sales Analytics Platform with ETL, ML, and Visualization"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "prefect>=2.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "minio>=7.2.0",
    "s3fs>=2024.3.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "toolz>=0.12.0",
    "cloudpickle>=3.0.0",
    "fsspec>=2024.3.0",
    "dask[complete]>=2025.12.0",
    "dask-ml>=2025.1.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[tool.uv]
compile-bytecode = true

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
